# fastapi-db-crudapp

./: LICENSE  index.py  pyproject.toml
config/: database.py
models/: points.py
routes/: points.py
schemas/: points.py
